fixed the title

--- a/hw-2-malfa100.ipynb
+++ b/hw-2-malfa100.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classwork 5\n",
+    "# Homework 2\n",
     "### Andrew Malfavon\n",
     "\n",
     "## Excercises\n",
